<resources>
    <string name="app_name">اخصم لي</string>
    <string name="note">Notes</string>
    <string name="ok">OK</string>
    <string name="need_permissions">You should allow the app to use these permissions to work well</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="letUsSave">Let us save with discount for me</string>
    <string name="next">Next</string>
    <string name="copyCode">Copy code</string>
    <string name="shopNow">Shop now</string>
    <string name="thisCouponWasUsed">This coupon was used</string>
    <string name="lastUsageWas">Last usage</string>
    <string name="time">time</string>
    <string name="howWasYourExperiment">How was your experiment?</string>
    <string name="tellUsIfItWorks">Tell us if it works</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="pleaseChooseLanguage">Please choose language</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="welcomeLogin">Welcome, login in discount for me</string>
    <string name="emailAddress">Email address</string>
    <string name="password">password</string>
    <string name="didYouForgetPassword">Did you forget your password?</string>
    <string name="haveNoAccount">You have no account?</string>
    <string name="newAccount">New account</string>
    <string name="or">OR</string>
    <string name="loginBy">Login by</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thanks">Thanks!</string>
    <string name="userName">User name</string>
    <string name="createAccount">Create account</string>
    <string name="alreadyHaveAccount">Already have account</string>
    <string name="forgetPassword">Forget password</string>
    <string name="enterYourEmailToResetPassword">Enter your email to reset password</string>
    <string name="verificationCode">Verification code</string>
    <string name="enterVerificationCode">Enter verification code</string>
    <string name="enterCodeYouReceived">Enter code you received on mail</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="changePassword">Change password</string>
    <string name="enterYourNewPassword">Please enter your new password</string>
    <string name="defineResults">Define results</string>
    <string name="category">Category</string>
    <string name="arrangeBy">Arrange by</string>
    <string name="add">Add</string>
    <string name="deals">Best deals</string>
    <string name="dealDetails">Deal details</string>
    <string name="favourites">Favourites</string>
    <string name="notifications">Notifications</string>
    <string name="deleteAll">Delete all</string>
    <string name="usedCoupons">Used coupons</string>
    <string name="addComplaints">Add complaints</string>
    <string name="writeYourComplaints">Write your complaints</string>
    <string name="location">Location</string>
    <string name="brand">Brand</string>
    <string name="coupon">Coupon</string>
    <string name="send">Send</string>
    <string name="personalProfile">Personal profile</string>
    <string name="personalSettings">Personal settings</string>
    <string name="saveChanges">Save changes</string>
    <string name="currentPassword">Current password</string>
    <string name="suggestCoupon">Suggest coupon</string>
    <string name="whatsAppNumber">WhatsApp number</string>
    <string name="home">Home</string>
    <string name="rateUs">Rate us</string>
    <string name="helpUs">Help center</string>
    <string name="logout">Logout</string>
    <string name="chooseLanguage">Choose language</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="copiedSuccessfully">Copied successfully!</string>
    <string name="profileUpdatedSuccessfully">Profile updated successfully</string>
    <string name="highestSale">Highest sale</string>
    <string name="A_Z">A-Z</string>
    <string name="Z_A">Z-A</string>
    <string name="results">Results</string>
    <string name="orderNow">Order now</string>
    <string name="copied">Copied</string>
    <string name="youShouldLoginFirst">You should login first</string>
    <string name="cancel">Cancel</string>
    <string name="addYourComplaints">Explain your complaints</string>
    <string name="discountCodeIs">Discount code is:</string>
</resources>