<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication.ForgetPasswordStepThree.ForgetPasswordStepThreeActivity">

    <ImageView
        android:id="@+id/tvSkip"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSkip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/changePassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/enterYourNewPassword"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/My.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/password"
                android:textColorHint="@color/grey"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="end|center_vertical"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textDirection="rtl"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/My.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/ConfirmPassword"
                android:textColorHint="@color/grey"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="end|center_vertical"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textDirection="rtl"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvEnter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/drawable_button"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>